# HackerRank-Challenges

./: README.md
C & C++/: .gitignore
C & C++/Classes/: CMakeLists.txt  box_it.cpp  class.cpp  classes_objects.cpp  exceptional_server.cpp  inherited_code.cpp  polymorphism.cpp  structs.cpp
C & C++/Classes/VirtualFunctions/: Person.cpp  Person.h  Professor.cpp  Professor.h  Student.cpp  Student.h  main.cpp
C & C++/Debugging/: CMakeLists.txt  exception_handling.cpp  hotel_prices.cpp  messages_order.cpp  ostream_operator.cpp
C & C++/Inheritance/: CMakeLists.txt  inheritance_intro.cpp  inherited_funcs.cpp  magic_spells.cpp  multilevel_inheritance.cpp  rectangle_area.cpp
C & C++/Other Concepts/: CMakeLists.txt  bit_array.cpp  complex.cpp  preprocessor.cpp  variadics.cpp  workshops.cpp
C & C++/RangesFilter/: RangesFilter.sln  RangesFilter.vcxproj  RangesFilter.vcxproj.filters  ranges_filter.cpp
C & C++/Stl/: CMakeLists.txt  deque.cpp  lower_bound.cpp  maps.cpp  print_pretty.cpp  sets.cpp  var_sized_arr.cpp  vector_erase.cpp  vector_sort.cpp
C & C++/Strings/: CMakeLists.txt  attribute_parser.cpp  strings.cpp  stringstream.cpp
C & C++/StructDoc/: StructDoc.c  StructDoc.h  main.c
C & C++/Templates/: CMakeLists.txt  class_temp_spec.cpp  class_templates.cpp
C & C++/TestLocales/: TestLocales.cpp  TestLocales.sln  TestLocales.vcxproj  TestLocales.vcxproj.filters
Java/advanced/: Annotations.java  CanYouAccess.java  CovariantReturnTypes.java  FactoryPattern.java  LambdaExpressions.java  MD5Demo.java  PrimeChecker.java  ReflectionAttributes.java  Sha256Demo.java  SingletonPattern.java  Varargs.java  VisitorPattern.java
Java/big_number/: BigDecimalSorter.java  BigIntegerOps.java  PrimalityTest.java
Java/data_structs/: Array1D.java  Arraylist.java  Bitset.java  Dequeue.java  Generics.java  Hashset.java  Hourglass.java  JavaComparator.java  JavaList.java  JavaMap.java  JavaSort.java  JavaStack.java  ServeStudents.java  SubArray.java
Java/exception_handling/: ExceptionHandling.java  TryCatch.java
Java/introduction/: CurrencyFormatter.java  DataTypes.java  Datatypes.java  DateAndTime.java  EndOfFile.java  IfElse.java  IntToString.java  LoopsI.java  LoopsII.java  OutputFormatting.java  StaticInitBlock.java  StdinStdoutI.java  StdinStdoutII.java  WelcomeToJava.java
Java/oop/: AbstractClass.java  Inheritance.java  (+6 more)
(+125 files in other folders)
