cmake_minimum_required(VERSION 3.22)
project(HackerRank)

set(CMAKE_CXX_STANDARD 20)

add_executable(exception_handling "exception_handling.cpp")

add_executable(hotel_prices "hotel_prices.cpp")

add_executable(messages_order "messages_order.cpp")

add_executable(ostream_operator "ostream_operator.cpp")