cmake_minimum_required(VERSION 3.22)
project(HackerRank)

set(CMAKE_CXX_STANDARD 20)

add_executable(inheritance_intro "inheritance_intro.cpp")

add_executable(inherited_functions "inherited_funcs.cpp")

add_executable(magic_spells "magic_spells.cpp")

add_executable(multilevel_inheritance "multilevel_inheritance.cpp")

add_executable(rectangle_area "rectangle_area.cpp")