cmake_minimum_required(VERSION 3.22)
project(HackerRank)

set(CMAKE_CXX_STANDARD 20)

add_executable(bit_array "bit_array.cpp")

add_executable(complex "complex.cpp")

add_executable(preprocessor "preprocessor.cpp")

add_executable(variadics "variadics.cpp")

add_executable(workshops "workshops.cpp")