cmake_minimum_required(VERSION 3.22)
project(HackerRank)

set(CMAKE_CXX_STANDARD 20)

add_executable(deque "deque.cpp")

add_executable(lower_bound.cpp "lower_bound.cpp")

add_executable(maps "maps.cpp")

add_executable(print_pretty "print_pretty.cpp")

add_executable(sets "sets.cpp")

add_executable(var_sized_arr "var_sized_arr.cpp")

add_executable(vector_erase "vector_erase.cpp")

add_executable(vector_sort "vector_sort.cpp")